[API][Users] List endpoint
